--- a/game.css
+++ b/game.css
@@ -64,6 +64,7 @@ html{
 	font-size:2em;
 	padding:20px;
 	border-radius:7px;
+	text-decoration: none;
 }
 #save:hover{
 	background-color:#87D170;
@@ -82,4 +83,20 @@ html{
 #playagainbtn:hover{
 	background-color:#87D170;
 	cursor:pointer;
+}
+
+
+#highscoreoverlay{
+	position:absolute;
+	top:0px;
+	left:0px;
+	display:block;
+	min-width:100%;
+	min-height:100%;
+	background-color:#fff;
+}
+
+#iframe{
+	min-width:100%;
+	min-height:100%;
 }
